--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">GithubRepositories</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="total_repositories">Total Repositories</string>
+    <string name="please_wait">Please wait</string>
 </resources>
